--- a/t2dm-calculator/css/style.css
+++ b/t2dm-calculator/css/style.css
@@ -503,6 +503,11 @@ pre {
   max-height: 340px;
   overflow-y: scroll; }
 
+.eno-page-title {
+	padding-bottom: 20px;
+  float: right;
+}
+
 .container {
   width: 100%;
   padding-right: 15px;
@@ -524,6 +529,7 @@ pre {
 
 .container-fluid {
   width: 100%;
+  max-width: 1000px;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
@@ -612,7 +618,8 @@ pre {
 
 .col-12 {
   flex: 0 0 100%;
-  max-width: 100%; }
+  max-width: 100%;
+  padding:40px; }
 
 .order-first {
   order: -1; }
@@ -692,6 +699,30 @@ pre {
 .offset-11 {
   margin-left: 91.66667%; }
 
+/* added by Derick */
+.eno-cal-title {
+  padding: 0px 0px 30px 0px;
+}
+.eno-logo{
+  display: inline-block;
+  max-width: 250px;
+  width: 100%;
+}  
+.eno-page-title{
+  display: inline-block;
+  float: ;
+  margin-top:18px;
+}  
+
+@media (max-width: 576px) {
+
+  .eno-cal-title {
+    text-align: center;
+  }
+  .eno-page-title {
+    float: none;
+  }
+}
 @media (min-width: 576px) {
   .col-sm {
     flex-basis: 0;
@@ -924,7 +955,8 @@ pre {
     max-width: 58.33333%; }
   .col-lg-8 {
     flex: 0 0 66.66667%;
-    max-width: 66.66667%; }
+    max-width: 66.66667%;
+    padding-top: 8px; }
   .col-lg-9 {
     flex: 0 0 75%;
     max-width: 75%; }
@@ -936,7 +968,8 @@ pre {
     max-width: 91.66667%; }
   .col-lg-12 {
     flex: 0 0 100%;
-    max-width: 100%; }
+    max-width: 100%; 
+    padding:20px 40px 40px 40px;}
   .order-lg-first {
     order: -1; }
   .order-lg-last {
@@ -1421,6 +1454,7 @@ pre {
   width: 100%;
   height: calc(2.0625rem + 2px);
   padding: 0.375rem 0.75rem;
+  border-radius: 10px !important;
   font-size: 0.875rem;
   line-height: 1.5;
   color: #495057;
@@ -1461,7 +1495,9 @@ select.form-control:focus::-ms-value {
   padding-top: calc(0.375rem + 1px);
   padding-bottom: calc(0.375rem + 1px);
   margin-bottom: 0;
-  font-size: inherit;
+  /*font-size: inherit;*/
+  font-size: 1rem;
+  font-weight: bold;
   line-height: 1.5; }
 
 .col-form-label-lg {
